test/implicitDup19_5.slq
def foo(x:ğ”¹,const cond:ğ”¹){
	y:=dup(x);
	z:=0;
	if cond{
		a:=y;
		b:=y; /// error
	}else{
		a:=y;
		b:=y; /// error
		x:=H(x);
	}
	return (x,a,b);
}
